# pylogger-slack

./: .gitignore  .readthedocs.yml  README.md  main.py  mkdocs.yml  pyproject.toml
.github/: copilot-instruction.md
.github/workflow/: publish-docs.yml  publish-pypi.yml
.github/workflows/: publish-docs.yml  publish-pypi.yml
docs/: index.md  requirements.txt
docs/usage/: configuration.md  detailed.md
